--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,15 @@ services:
       - "E:/Others/WTDocker/csvserver-assignment/csvserver/solution/inputFile:/csvserver/inputdata"
     env_file:
       - ./csvserver.env
-    environment:
-      - CSVSERVER_BORDER=Orange
+    restart: always
+
+
+  prometheus:
+    image: prom/prometheus:v2.45.2
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml 
     restart: always
 
